ref[storage]: refactor convert